--- a/css/_button.scss
+++ b/css/_button.scss
@@ -8,14 +8,14 @@
     color: $text-color-2;
 }
 
-.button.detail {
+.button.btn-detail {
     background-color: $button-color-2;
     margin-top: 0;
     margin-right: 15px;
     max-width: 100px;
 }
 
-.button.remove {
+.button.btn-remove {
     background-color: $button-color-3;
     margin-top: 0;
     margin-right: 15px;
